force-app/main/default/objects/Product__c/fields/Customer_Paying__c.field-meta.xml
<CustomField>
    <fullName>Customer_Paying__c</fullName>
    <label>Customer Paying</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Paying</fullName>
            </value>
            <value>
                <fullName>Customer Not Paying</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>