force-app/main/default/objects/Product__c/fields/Customer_Skip_Trace__c.field-meta.xml
<CustomField>
    <fullName>Customer_Skip_Trace__c</fullName>
    <formula>Customer__r.Skip_Trace__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Skip Trace</label>
    <type>Checkbox</type>
</CustomField>