force-app/main/default/objects/Product__c/fields/Customer_SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Customer_SMS_Opt_Out__c</fullName>
    <formula>Customer__r.PersonContact.smagicinteract__SMSOptOut__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>