force-app/main/default/objects/Product__c/fields/Data_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Id__c</fullName>
    <description>External Id for Debtnext Accounts</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Data Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>