force-app/main/default/objects/Product__c/fields/Data_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Status_Description__c</fullName>
    <description>Description for the Product Status value</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description for the Product Status value</inlineHelpText>
    <label>Data Status Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>