force-app/main/default/objects/Product__c/fields/Date_for_Stat_Barred_calculations__c.field-meta.xml
<CustomField>
    <fullName>Date_for_Stat_Barred_calculations__c</fullName>
    <description>To calculate the date for stat barred date calculations</description>
    <formula>if( ISNULL(Last_Payment_Date__c ),  Open_Date__c  ,Last_Payment_Date__c )</formula>
    <inlineHelpText>To calculate the date for stat barred date calculations</inlineHelpText>
    <label>Date for Stat Barred calculations</label>
    <type>Date</type>
</CustomField>