force-app/main/default/objects/Product__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>The primary account holder&apos;s date of birth</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The primary account holder&apos;s date of birth</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>