force-app/main/default/objects/Product__c/fields/DebtNext_Data_ID__c.field-meta.xml
<CustomField>
    <fullName>DebtNext_Data_ID__c</fullName>
    <description>External Id for Debtnext Accounts</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>DebtNext Data ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>