force-app/main/default/objects/Product__c/fields/Deceased_Date__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Date__c</fullName>
    <description>Deceased Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Deceased Date</inlineHelpText>
    <label>Deceased Date</label>
    <type>Date</type>
</CustomField>