force-app/main/default/objects/Product__c/fields/Delinquency_Status__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Status__c</fullName>
    <description>Whether this account is currently in delinquency, as per the current balance effective date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Whether this account is currently in delinquency, as per the current balance effective date</inlineHelpText>
    <label>Delinquency Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>