force-app/main/default/objects/Product__c/fields/Delinquency_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Status_Formula__c</fullName>
    <description>True if this account is currently delinquent (missed it&apos;s next payment date), false if it is current</description>
    <formula>IF(TEXT(Source_System__c) == &quot;FDR&quot;, IF( (Delinquency_Cycles__c &gt; 0) &amp;&amp;( PRIN_Number__c = 200) , true, false) ,  IF(TEXT(Source_System__c)== &quot;Megasys&quot;, IF(( Delinquency_Cycles__c &gt; 0) &amp;&amp; ( Branch_Number__c = 1), true, false), false))</formula>
    <inlineHelpText>True if this account is currently delinquent (missed it&apos;s next payment date), false if it is current</inlineHelpText>
    <label>Is Delinquent</label>
    <type>Checkbox</type>
</CustomField>