force-app/main/default/objects/Product__c/fields/Delinquent_Day_for_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Delinquent_Day_for_Workflow__c</fullName>
    <label>Delinquent Day for Workflow</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>