force-app/main/default/objects/Product__c/fields/Depot_Volontaire__c.field-meta.xml
<CustomField>
    <fullName>Depot_Volontaire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Depot Volontaire</description>
    <label>Depot Volontaire</label>
    <type>Checkbox</type>
</CustomField>