force-app/main/default/objects/Product__c/fields/Difference_Greater_Than_N_Years__c.field-meta.xml
<CustomField>
    <fullName>Difference_Greater_Than_N_Years__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;Distressed_Account&apos;,
IF(NOT(ISBLANK(Charged_Off_Date__c)),
IF(TODAY() - Charged_Off_Date__c &gt; 2192, True, False),
True),
IF(NOT(ISBLANK(Last_Payment_Date__c)),
IF( TODAY() - Last_Payment_Date__c &gt; 2192, True, False),
IF( TODAY() - Disbursement_Date__c &gt; 2192, True, False)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Greater Than N Years</label>
    <type>Checkbox</type>
</CustomField>