force-app/main/default/objects/Product__c/fields/Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Date__c</fullName>
    <description>CCS CFG First Payment Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CCS CFG First Payment Date</inlineHelpText>
    <label>CCS CFG First Payment Date</label>
    <type>Date</type>
</CustomField>