force-app/main/default/objects/Product__c/fields/Display_Seller__c.field-meta.xml
<CustomField>
    <fullName>Display_Seller__c</fullName>
    <formula>CASE(Originating_Creditor__c,
&quot;Bank of Nova Scotia&quot;, &quot;Bank of Nova Scotia&quot;,
&quot;BNS&quot;, &quot;Bank of Nova Scotia&quot;,
&quot;BNS-Tangerine&quot;, &quot;Tangerine Bank&quot;,
&quot;CUETS&quot;, &quot;CUETS&quot;,
&quot;Fidem Financial&quot;, &quot;Fidem Finance Inc.&quot;,
&quot;MBNA&quot;, &quot;MBNA (a division of the Toronto-Dominion Bank)&quot;,
&quot;TD CANADA TRUST&quot;, &quot;TD Canada Trust&quot;,
Originating_Creditor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Seller</label>
    <type>Text</type>
</CustomField>