force-app/main/default/objects/Product__c/fields/Distressed_Account_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Distressed_Account_Active_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Distressed Account Active Date</label>
    <type>Date</type>
</CustomField>