force-app/main/default/objects/Product__c/fields/Effective_Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Effective_Current_Balance__c</fullName>
    <description>Effective current balance is used for backend purpose only to populate effective balance after payment transactions on Product</description>
    <inlineHelpText>Effective current balance is used for backend purpose only to populate effective balance after payment transactions on Product</inlineHelpText>
    <label>Effective Current Balance</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>