force-app/main/default/objects/Product__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>The primary account holder&apos;s email address</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The primary account holder&apos;s email address</inlineHelpText>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>