force-app/main/default/objects/Product__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <formula>Customer__r.Employer_Name__pc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer Name</label>
    <type>Text</type>
</CustomField>