force-app/main/default/objects/Product__c/fields/Equifax_Reported_As_Complete_Count__c.field-meta.xml
<CustomField>
    <fullName>Equifax_Reported_As_Complete_Count__c</fullName>
    <description>To count the number of time record is reported as Completed for Equifax</description>
    <inlineHelpText>To count the number of time record is reported as Completed for Equifax</inlineHelpText>
    <label>Equifax - Reported As Complete Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>