force-app/main/default/objects/Product__c/fields/Exclude_For_Email__c.field-meta.xml
<CustomField>
    <fullName>Exclude_For_Email__c</fullName>
    <description>Do not send Email if conditions are matching</description>
    <formula>External_Status_Current__c = &apos;Z&apos; || 
External_Status_Current__c = &apos;U&apos; || 
External_Status_Current__c = &apos;L&apos; || 
External_Status_Current__c = &apos;B&apos; || 
ISPICKVAL(Collection_Sub_Status__c, &apos;Consumer Proposal&apos;) || 
ISPICKVAL(Collection_Sub_Status__c, &apos;Bankrupt Account&apos;) || 
ISPICKVAL(Collection_Sub_Status__c, &apos;Credit Counselling&apos;) || 
ISPICKVAL(Collection_Sub_Status__c, &apos;Previously Paid with Agency&apos;) || 
ISPICKVAL(Collection_Sub_Status__c, &apos;Deceased&apos;) || 
ISPICKVAL(Reason_for_Legal__c, &apos;Settlement&apos;) || 
ISPICKVAL(Reason_for_Legal__c, &apos;All Actions complete&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Do not send Email if conditions are matching</inlineHelpText>
    <label>Exclude For Email</label>
    <type>Checkbox</type>
</CustomField>