force-app/main/default/objects/Product__c/fields/Exclude_for_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Exclude_for_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Using bureau reporting to exclude accounts to report</description>
    <label>Exclude for Reporting</label>
    <type>Checkbox</type>
</CustomField>