force-app/main/default/objects/Product__c/fields/Exclude_From_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Exclude From Purchase</inlineHelpText>
    <label>Exclude From Purchase</label>
    <type>Checkbox</type>
</CustomField>