force-app/main/default/objects/Product__c/fields/Exclude_From_Purchase_Comments__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Purchase_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Exclude From Purchase Comments</inlineHelpText>
    <label>Exclude From Purchase Comments</label>
    <length>225</length>
    <type>Text</type>
</CustomField>