force-app/main/default/objects/Product__c/fields/Exhaust_Account__c.field-meta.xml
<CustomField>
    <fullName>Exhaust_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhaust Account</label>
    <type>Checkbox</type>
</CustomField>