force-app/main/default/objects/Product__c/fields/Expected_First_disbursement_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_First_disbursement_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected First disbursement date</label>
    <type>Date</type>
</CustomField>