force-app/main/default/objects/Product__c/fields/Expected_Payment_Amount_received_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Payment_Amount_received_To_Date__c</fullName>
    <formula>Accepted_Payment_Amount__c * Months_active_in_Program__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment amount that is expected to have been received to date</inlineHelpText>
    <label>Expected Payment Amount received To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>