force-app/main/default/objects/Product__c/fields/Expected_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Expected_Recovery__c</fullName>
    <description>Expected Recovery %  = 100 - FairShare %</description>
    <formula>1 -  FairShare_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Expected Recovery %  = 100 - FairShare %</inlineHelpText>
    <label>Expected Recovery %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>