force-app/main/default/objects/Product__c/fields/External_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>External_Status_Date__c</fullName>
    <description>External Status last updated date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>External Status last updated date</inlineHelpText>
    <label>External Status Date</label>
    <type>Date</type>
</CustomField>