force-app/main/default/objects/Product__c/fields/Extinguished_Status__c.field-meta.xml
<CustomField>
    <fullName>Extinguished_Status__c</fullName>
    <description>DebtNext-specific</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>DebtNext-specific</inlineHelpText>
    <label>Extinguished Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>