force-app/main/default/objects/Product__c/fields/FairShare_Percentage__c.field-meta.xml
<CustomField>
    <fullName>FairShare_Percentage__c</fullName>
    <description>Donation Percentage given to CCS Agency for their Services</description>
    <inlineHelpText>Donation Percentage given to CCS Agency for their Services</inlineHelpText>
    <label>FairShare Percentage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>