force-app/main/default/objects/Product__c/fields/FDR_Account_Join_ID__c.field-meta.xml
<CustomField>
    <fullName>FDR_Account_Join_ID__c</fullName>
    <description>FDR: The ID that joins multiple Account ID&apos;s to a single customer account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>FDR: The ID that joins multiple Account ID&apos;s to a single customer account</inlineHelpText>
    <label>FDR Account Join ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>