force-app/main/default/objects/Product__c/fields/Fee_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Fee_Recovery__c</fullName>
    <description>Total of all Fee balances on Account</description>
    <formula>/*Current_Bal_Attorney_Fees__c +  Current_Bal_General_Fees__c +  Current_Bal_Court_Fees__c +  Current_Bal_NSF_Fees__c  +  Current_Bal_Other_Fees__c*/

 Recoverable_Fee__c +  Non_Recoverable_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of all Fee balances on Account</inlineHelpText>
    <label>Fee Recovery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>