force-app/main/default/objects/Product__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>The primary account holder&apos;s first name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The primary account holder&apos;s first name</inlineHelpText>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>