force-app/main/default/objects/Product__c/fields/Fourth_Proposal_Date__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Proposal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fourth Proposal Date</label>
    <type>Date</type>
</CustomField>