force-app/main/default/objects/Product__c/fields/Fraud_Date__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Date__c</fullName>
    <description>Fraud Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Fraud Date</inlineHelpText>
    <label>Fraud Date</label>
    <type>Date</type>
</CustomField>