force-app/main/default/objects/Product__c/fields/Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Date__c</fullName>
    <description>The requested date this account was funded by Affirm</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The requested date this account was funded by Affirm</inlineHelpText>
    <label>Requested Funding Date</label>
    <type>Date</type>
</CustomField>