force-app/main/default/objects/Product__c/fields/Funding_Source_Token__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source_Token__c</fullName>
    <description>To Calculate Source Token depend Branch Number</description>
    <formula>CASE( $Setup.Loan_ReEngineering__c.Default_Company_Name__c , 
&apos;Affirm&apos;, CASE( Branch_Number__c ,
				null, &apos;BA3RI923U3GF&apos;,
				1, &apos;BA3RI923U3GF&apos;,
				2, &apos;BA7RDF3X3MP3&apos;,
				3, &apos;BA3RI923U3GF&apos;,
				4, &apos;BA7RDF3X3MP3&apos;,
				&apos;BA3RI923U3GF&apos;), 
&apos;Fidem&apos;, CASE( Branch_Number__c ,
				null, &apos;BA1GHHTW5X7V&apos;,
				1, &apos;BA1GHHTW5X7V&apos;,
				2, &apos;BA1GHHTW5X7V&apos;,
				3, &apos;BA1GHHTW5X7V&apos;,
				4, &apos;BA1GHHTW5X7V&apos;,
				&apos;BA1GHHTW5X7V&apos;), 
null)</formula>
    <inlineHelpText>To Calculate Source Token depend Branch Number</inlineHelpText>
    <label>Funding Source Token</label>
    <type>Text</type>
</CustomField>