force-app/main/default/objects/Product__c/fields/Funding_Status__c.field-meta.xml
<CustomField>
    <fullName>Funding_Status__c</fullName>
    <description>The current status of this account&apos;s funding process</description>
    <inlineHelpText>The current status of this account&apos;s funding process</inlineHelpText>
    <label>Funding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Manually Funded</fullName>
            </value>
            <value>
                <fullName>Funding Failed</fullName>
            </value>
            <value>
                <fullName>Released Batch</fullName>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>