force-app/main/default/objects/Product__c/fields/Guarantor_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Address_Line_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>