force-app/main/default/objects/Product__c/fields/Guarantor_AKA_Name__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_AKA_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor AKA Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>