force-app/main/default/objects/Product__c/fields/Guarantor_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Cell_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor Cell Phone</label>
    <type>Phone</type>
</CustomField>