force-app/main/default/objects/Product__c/fields/Guarantor_Country__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>