force-app/main/default/objects/Product__c/fields/Guarantor_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Date_of_Birth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor Date of Birth</label>
    <type>Date</type>
</CustomField>