force-app/main/default/objects/Product__c/fields/Guarantor_Employer_City__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Employer_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor Employer City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>