force-app/main/default/objects/Product__c/fields/Guarantor_Employer_Country__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Employer_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor Employer Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>