force-app/main/default/objects/Product__c/fields/Guarantor_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Employer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>