force-app/main/default/objects/Product__c/fields/Guarantor_Employer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Employer_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor Employer Phone</label>
    <type>Phone</type>
</CustomField>