force-app/main/default/objects/Product__c/fields/Guarantor_Employer_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Employer_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor Employer Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>