force-app/main/default/objects/Product__c/fields/Guarantor_Employer_Province__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Employer_Province__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor Employer Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>