force-app/main/default/objects/Product__c/fields/Guarantor_Employer_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Employer_Street_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor Employer Street Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>