force-app/main/default/objects/Product__c/fields/Guarantor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>