force-app/main/default/objects/Product__c/fields/Guarantor_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Home_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guarantor Home Phone</label>
    <type>Phone</type>
</CustomField>